# simulated-annealing

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
experiments/: run_comparison.py  run_sa_tuning.py  run_single.py
src/knapsack/: cooling.py  initial.py  instance.py  neighborhood.py  solution.py  stopping.py
src/knapsack/algorithms/: base.py  random_search.py  simulated_annealing.py
