[project]
name = "simulated-annealing"
version = "0.1.0"
description = "Discrete Knapsack via Random Search and Simulated Annealing"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "tqdm>=4.66",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knapsack"]
